--- a/index.css
+++ b/index.css
@@ -18,5 +18,5 @@ h1{
 .carousel-item{
     /* width: 80vw; */
     padding: 10%;
-    background-color: lightcoral;
+    background-color: rgb(72, 127, 189);
 }
