--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ h1{
     padding: 0;
 }
 .carousel-item{
-    /* width: 80vw; */
+    width: 100vw;
     padding: 10%;
     background-color: rgb(72, 127, 189);
 }
