--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ h1{
     padding: 0;
 }
 .carousel-item{
-    padding: 15%;
+    padding: 10%;
     background-color: rgb(72, 127, 189);
 }
 #abstract{
@@ -30,4 +30,14 @@ h1{
 #end{
     padding: 10%;
     padding-bottom: 30px;
+}
+#box1{
+    padding-bottom: 60px;
+    padding-top: 60px;
+    background-color: rgb(72, 127, 189);
+}
+#box2{
+    padding-bottom: 30px;
+    padding-top: 30px;
+    background-color: rgb(72, 127, 189);
 }
