--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body,html{
     margin: 0;
     padding: 0;
 }
-h1{
+h3{
     margin: 0;
     padding: 0;
 }
@@ -40,4 +40,7 @@ h1{
     padding-bottom: 30px;
     padding-top: 30px;
     background-color: rgb(72, 127, 189);
+}
+h5{
+    padding-top: 100px;
 }
