--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #title{
-    font-family: 'Lobster', cursive;
+    font-family: 'Abril Fatface', cursive;
     margin: 0;
     padding: 30px;
     padding-bottom: 30px;
@@ -7,11 +7,12 @@
     background-color: rgb(163, 209, 228);
 }
 body,html{
-    font-family: 'Lobster', cursive;
+    font-family: 'Abril Fatface', cursive;
     margin: 0;
     padding: 0;
 }
 h3{
+    font-family: 'Abril Fatface', cursive;
     margin: 0;
     padding: 0;
 }
@@ -20,12 +21,12 @@ h3{
     background-color: rgb(72, 127, 189);
 }
 #abstract{
-    padding: 30px;
-    padding-bottom: 30px;
+    padding: 40px;
+    padding-bottom: 40px;
 }
 #stages{
-    padding: 30px;
-    padding-bottom: 30px;
+    padding: 40px;
+    padding-bottom: 40px;
 }
 #end{
     padding: 10%;
@@ -42,5 +43,16 @@ h3{
     background-color: rgb(72, 127, 189);
 }
 h5{
+    font-family: 'Abril Fatface', cursive;
     padding-top: 100px;
+}
+h6{
+    font-family: 'Abril Fatface', cursive;
+    font-size-adjust: 50px;
+    padding-bottom: 100%;
+}
+#bar1{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background-color: rgb(212, 205, 143);
 }
